# nn-training

./: .gitignore  CMakeLists.txt  LICENSE  NEXT_STEPS.md  README.md
docs/: serial_mpi_parity.md
include/: config.h  data_mnist.h  mlp.h  tensor.h  train_cli.h  train_common.h  train_mpi_data_parallel.h  train_mpi_dp_hierarchial.h  train_mpi_dp_local_sgd.h  train_mpi_model_parallel.h  train_mpi_pipeline.h  train_serial.h
report/: main.bbl  main.tex  references.bib
result_scripts/: summarize_scaling.py
results/charts_20260512_110608_run_mp_scaling_study_2x4_m_32/: c1_mp_b1024.csv  c1_mp_b2048.csv  c1_mp_b256.csv  c1_mp_b4096.csv  c1_mp_b512.csv  c1_pip_b1024.csv  c1_pip_b2048.csv  c1_pip_b256.csv  c1_pip_b4096.csv  c1_pip_b512.csv  c1_serial_b1024.csv  c1_serial_b2048.csv  c1_serial_b256.csv  c1_serial_b4096.csv  c1_serial_b512.csv  c2_mp.csv  c2_pip_mb32.csv  c2_pip_mb64.csv  c2_pip_mb8.csv  c2_serial.csv  c4_mp_1x2_ws2.csv  c4_mp_2x2_ws4.csv  c4_mp_3x2_ws6.csv  c4_mp_4x2_ws8.csv  c4_pip_1x2_ws2.csv  c4_pip_2x2_ws4.csv  c4_pip_3x2_ws6.csv  c4_pip_4x2_ws8.csv  c4_pip_balanced_1x2_ws2.csv  c4_pip_balanced_2x2_ws4.csv  c4_pip_balanced_3x2_ws6.csv  c4_pip_balanced_4x2_ws8.csv  c4_serial.csv  chart1_batch_sweep.csv  chart2_microbatch_sweep.csv  chart3_time_split.csv  chart4_worldsize_sweep.csv
results/scaling/: flat_dp_1n16r_256-128-64.csv  flat_dp_1n16r_256-128.csv  flat_dp_1n32r_256-128-64.csv  flat_dp_1n32r_256-128.csv  flat_dp_1n4r_256-128-64.csv  flat_dp_1n4r_256-128.csv  flat_dp_2n64r_256-128-64.csv  flat_dp_2n64r_256-128.csv  flat_dp_4n128r_256-128-64.csv  hier_dp_1n16r_256-128-64.csv  hier_dp_1n16r_256-128.csv  hier_dp_1n32r_256-128-64.csv  hier_dp_1n32r_256-128.csv  hier_dp_1n4r_256-128-64.csv  hier_dp_1n4r_256-128.csv  hier_dp_2n64r_256-128-64.csv  hier_dp_2n64r_256-128.csv  hier_dp_4n128r_256-128-64.csv  local_sgd_K10_1n16r_256-128-64.csv  local_sgd_K10_1n32r_256-128-64.csv  local_sgd_K10_1n4r_256-128-64.csv  local_sgd_K10_2n64r_256-128-64.csv  local_sgd_K10_4n128r_256-128-64.csv  local_sgd_K50_1n16r_256-128-64.csv  local_sgd_K50_1n32r_256-128-64.csv  local_sgd_K50_1n4r_256-128-64.csv  local_sgd_K50_2n64r_256-128-64.csv  local_sgd_K50_4n128r_256-128-64.csv  make_scaling_visuals.py  scaling_sweeps_result.txt  serial_256-128-64.csv  summarize_dp_scaling.py  summarize_scaling.py
scripts/: build.sh  compare_metrics.py  job-serial.slurm  job_mpi_dp.slurm  job_mpi_mp.slurm  prepare_mnist.sh  run_dp_scaling_study.sh  run_mp_scaling_study_2x4_m_32.sh  run_mp_scaling_study_varying_m.sh  run_mpi_dp_hierarchial_perf.sh  run_mpi_dp_hierarchial_smoke.sh  run_mpi_dp_local_sgd_perf.sh  run_mpi_dp_perf.sh  run_mpi_dp_smoke.sh  run_mpi_mp_perf.sh  run_mpi_mp_pip_perf.sh  run_mpi_mp_pip_smoke.sh  run_mpi_mp_smoke.sh  run_scaling_study.sh  run_serial_perf.sh  run_serial_smoke.sh  sweep-perf.sh
src/: data_mnist.cpp  main.cpp  main_mpi_dp.cpp  main_mpi_dp_hierarchial.cpp  main_mpi_dp_local_sgd.cpp  main_mpi_mp.cpp  main_mpi_mp_pip.cpp  main_serial.cpp  mlp.cpp  tensor.cpp  train_cli.cpp  train_common.cpp  train_mpi_data_parallel.cpp  train_mpi_dp_hierarchial.cpp  train_mpi_dp_local_sgd.cpp  train_mpi_model_parallel.cpp  train_mpi_pipeline copy.cpp  train_mpi_pipeline.cpp  train_serial.cpp  visualize_sweep.py
